# nlp_graph_analysis

./: README.md  bibliotecas.txt  pyproject.toml  test.ipynb
nlpgraph/: __init__.py  knowledge.py
