[tool.poetry]
name = "nlpgraph"
version = "0.1.0"
description = ""
authors = ["Victoria Reis <victoria.reis@coc.ufrj.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pandas = "^2.1.3"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
